--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,9 @@
-* {
-  box-sizing: border-box;
-}
+/* anything that affects the way elements lay out on the page 
+- positioning
+- size
+- display (block, inline, none)
+- floats
+*/
 
 main {
   text-align: center;
@@ -9,52 +12,56 @@ main {
   grid-template-rows: 75px 150px 125px 125px 250px 250px 80px;
 }
 
-section {
-  border: 1px solid black;
-  background-color: #eee;
-}
-
 section:nth-of-type(1) {
+  background-color: #111;
   grid-column: 1/3;
   grid-row: 1;
 }
 
 section:nth-of-type(2) {
+  background-color: #333;
   grid-column: 1/3;
   grid-row: 2;
 }
 
 section:nth-of-type(3){
+  background-color: #555;
   grid-column: 1/3;
   grid-row: 3;
 }
 
 section:nth-of-type(4){
+  background-color: #777;
   grid-column: 1/3;
   grid-row: 4;
 }
 
 section:nth-of-type(5){
+  background-color: #999;
   grid-column: 1/2;
   grid-row: 5;
 }
 
 section:nth-of-type(6){
+  background-color: #aaa;
   grid-column: 2/3;
   grid-row: 5;
 }
 
 section:nth-of-type(7){
+  background-color: #ccc;
   grid-column: 1/3;
   grid-row: 6;
 }
 
 section:nth-of-type(8){
+  background-color: #ddd;
   grid-column: 2/3;
   grid-row: 6;
 }
 
 section:nth-of-type(9){
+  background-color: #333666;
   grid-column: 1/3;
   grid-row: 7;
 }
@@ -65,6 +72,66 @@ section:nth-of-type(9){
 section {
   background-color: red;
 }
+
+section {
+  border: 1px solid black;
+  background-color: #eee;
+}
+
+section:nth-of-type(1) {
+  background-color: #111;
+  grid-column: 1/3;
+  grid-row: 1;
+}
+
+section:nth-of-type(2) {
+  background-color: #333;
+  grid-column: 1/3;
+  grid-row: 2;
+}
+
+section:nth-of-type(3){
+  background-color: #555;
+  grid-column: 1/3;
+  grid-row: 3;
+}
+
+section:nth-of-type(4){
+  background-color: #777;
+  grid-column: 1/3;
+  grid-row: 4;
+}
+
+section:nth-of-type(5){
+  background-color: #1155cc;
+  grid-column: 1/2;
+  grid-row: 5;
+}
+
+section:nth-of-type(6){
+  background-color: #cc8800;
+  grid-column: 2/3;
+  grid-row: 5;
+}
+
+section:nth-of-type(7){
+  background-color: #888fff;
+  grid-column: 1/3;
+  grid-row: 6;
+}
+
+section:nth-of-type(8){
+  background-color: #777111;
+  grid-column: 2/3;
+  grid-row: 6;
+}
+
+section:nth-of-type(9){
+  background-color: #666333;
+  grid-column: 1/3;
+  grid-row: 7;
+}
+
 }
 
 
